Correctly display RTL dates in Print Preview.

Use the locale's RTL direction in Print Preview's header/footer template.

Bug: 906521
Change-Id: I97d2f8d30be8bfe26f4260df05fe26138655c487
Reviewed-on: https://chromium-review.googlesource.com/c/1354568
Commit-Queue: Lei Zhang <thestig@chromium.org>
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613370}
Former-commit-id: 8edccce7e279612ab424b59899e43cee6db36169